prevent editor title bar from overlapping with sidebar in narrow windows

--- a/client/camera/CameraMain.css
+++ b/client/camera/CameraMain.css
@@ -49,7 +49,6 @@
 
 :local(.editorTitleBar) {
   margin: commonMargin;
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
